force-app/main/default/objects/AM_Faculty__c/fields/AM_Department__c.field-meta.xml
<CustomField>
    <fullName>AM_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>AM_Department__c</referenceTo>
    <relationshipLabel>Faculties</relationshipLabel>
    <relationshipName>Faculties</relationshipName>
    <type>Lookup</type>
</CustomField>