force-app/main/default/objects/AM_Faculty__c/fields/AM_HireDate__c.field-meta.xml
<CustomField>
    <fullName>AM_HireDate__c</fullName>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>