force-app/main/default/objects/AM_Faculty__c/fields/AM_LastName__c.field-meta.xml
<CustomField>
    <fullName>AM_LastName__c</fullName>
    <label>Last Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>